--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="CSS/INDEX.CSS" rel="stylesheet">
+        <link href="INDEX.CSS" rel="stylesheet">
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     </head>
     <body>
@@ -37,38 +37,38 @@
 
         <div class="image-container">
             <div class="img1">
-                <img src="IMAGES/shop-category-img-1.jpg" width="90%">
+                <img src="shop-category-img-1.jpg" width="90%">
                 <h3>CACTUSES</h3>
                 <p>from $159</p>
             </div>
              <div class="img2">
-                <img src="IMAGES/shop-category-img-2.jpg" width="90%">
+                <img src="shop-category-img-2.jpg" width="90%">
                <h3>VARIOUS</h3>
                <p>from $159</p>
             </div>
             <div class="img3">
-                <img src="IMAGES/shop-category-img-3.jpg" width="90%">
+                <img src="shop-category-img-3.jpg" width="90%">
                 <h3>WINTER</h3>
                 <p>from $259</p>
             </div>
             <div class="img4">
-                <img src="IMAGES/shop-category-img-4.jpg" width="90%">
+                <img src="shop-category-img-4.jpg" width="90%">
                 <h3>POPULAR</h3>
                 <p>from $159</p>
             </div>
             <div class="img5">
-                <img src="IMAGES/shop-category-img-5.jpg" width="90%">
+                <img src="shop-category-img-5.jpg" width="90%">
                 <h3>EXOTIC</h3>
                     <p>from $259</p>
             </div>
               <div class="img6">
-                <img src="IMAGES/shop-category-img-6.jpg" width="90%">
+                <img src="shop-category-img-6.jpg" width="90%">
                 <h3>EXOTIC</h3>
                 <p>from $259</p>
             </div>
         </div>
         <div class="diff">
-            <img src="IMAGES/testimonial-img-1.png">
+            <img src="testimonial-img-1.png">
             <div class="imango">
                 <img src="https://img.icons8.com/ios/40/807E7E/left.png"/>
                 <img src="https://img.icons8.com/ios/40/807E7E/right.png"/>
@@ -82,17 +82,17 @@
          <h4>FEATURES</h4>
         <div class="more">
             <div class="shop1">
-              <img src="IMAGES/shop-1-img.jpg" width="80%">
+              <img src="shop-1-img.jpg" width="80%">
               <h4></h4>
             </div>
             <div class="shop2">
-               <img src="IMAGES/shop-2-img.jpg" width="80%"> 
+               <img src="shop-2-img.jpg" width="80%"> 
             </div>
             <div class="shop3">
-              <img src="IMAGES/shop-3-img.jpg" width="80%">
+              <img src="shop-3-img.jpg" width="80%">
             </div>
             <div class="shop4">
-                <img src="IMAGES/shop-7-img.jpg" width="80%">
+                <img src="shop-7-img.jpg" width="80%">
             </div>
         </div>
      </div>
@@ -108,7 +108,7 @@
                    <h5>sana</h5>
          </div>
          <div class="img-con">
-             <img src="IMAGES/h2-img-1.jpg" width="110%">
+             <img src="h2-img-1.jpg" width="110%">
          </div>
      </div>
 
